# cqrs-bus

./: .gitignore  README.md  pyproject.toml
src/cqrs_bus/: __init__.py
src/cqrs_bus/commands/: __init__.py  command.py  command_bus.py
src/cqrs_bus/discovery/: __init__.py  dependency_resolver.py  exceptions.py  handler_discovery.py  handler_registry.py
src/cqrs_bus/queries/: __init__.py  query.py  query_bus.py
tests/: test_command_bus.py  test_dependency_resolver.py  test_handler_discovery.py  test_handler_registry.py  test_integration.py  test_query_bus.py
tests/fake_app/commands/: create_item_handler.py
tests/fake_app/queries/: get_item_handler.py
tests/fake_app/shared/commands/: shared_command_handler.py
