[project]
name = "cqrs-bus"
version = "0.1.0"
description = "Async CQRS Command/Query Bus with auto-discovery for Python"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
prometheus = ["prometheus-client>=0.21.0"]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "pytest-cov>=5.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cqrs_bus"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src", "tests"]
testpaths = ["tests"]

[tool.coverage.run]
source = ["cqrs_bus"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]
ignore = ["E501", "B024"]
